--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <!-- Основний контейнер для React-додатка. React буде "монтувати" вміст у цей `div` -->
     <div id="root"></div>
+    <!-- Підключає основний файл JavaScript (React-додаток) з використанням модуля ES6 -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
